// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignDid should allow signing with full did 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Sign with on-chain DID
    </h1>
    <p
      class="subline"
    >
      Select your Identity and sign with your password
    </p>
    <div
      class="container"
    >
      <section>
        <div
          class="avatar fullDid"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            KILT Identity 2
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="KILT Identity 1"
        class="left"
        href="/?data=eyJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
        title="KILT Identity 1"
      />
      <a
        aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
        class="right"
        href="/?data=eyJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
        title="KILT Identity 3 which has a very long name and might not even fit on the screen"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 1"
            class="bubble bubbleActive"
            href="/?data=eyJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 2"
            class="bubble bubbleActive"
            href="/?data=eyJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/?data=eyJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="label"
    >
      Request from:
    </p>
    <p
      class="origin"
    >
      https://example.org/foo
    </p>
    <p
      class="label"
      id="plaintext"
    >
      Message to be signed:
    </p>
    <p
      class="plaintextLine"
    >
      <textarea
        aria-labelledby="plaintext"
        class="plaintext"
        readonly=""
      >
        All your base are belong to us
      </textarea>
      <button
        aria-label="copy to clipboard"
        class="copy"
        title="copy to clipboard"
        type="button"
      />
    </p>
    <p
      class="resetLine"
    >
      <label
        class="passwordLabel"
        for="password"
      >
        Sign with password:
      </label>
      <a
        class="reset"
        href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr/reset"
      >
        Reset password
      </a>
    </p>
    <p
      class="passwordLine"
    >
      <input
        class="password"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <button
        aria-label="Show"
        class="show"
        title="Show"
        type="button"
      />
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
    <label
      class="rememberLabel"
    >
      <span>
        Remember password for the next 15 minutes
      </span>
      <input
        class="remember"
        name="remember"
        type="checkbox"
      />
      <span />
    </label>
    <p
      class="buttonsLine"
    >
      <button
        class="reject"
        type="button"
      >
        Reject
      </button>
      <button
        class="submit"
        type="submit"
      >
        Sign
      </button>
      <output
        class="errorTooltip"
        hidden=""
      >
        You need to upgrade to an on-chain DID first
      </output>
    </p>
  </form>
</div>
`;

exports[`SignDid should render 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Sign with on-chain DID
    </h1>
    <p
      class="subline"
    >
      Select your Identity and sign with your password
    </p>
    <div
      class="container"
    >
      <section>
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            KILT Identity 1
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/?data=eyJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
        title="Add Identity"
      />
      <a
        aria-label="KILT Identity 2"
        class="right"
        href="/?data=eyJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
        title="KILT Identity 2"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 1"
            class="bubble bubbleActive"
            href="/?data=eyJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 2"
            class="bubble bubbleActive"
            href="/?data=eyJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/?data=eyJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="label"
    >
      Request from:
    </p>
    <p
      class="origin"
    >
      https://example.org/foo
    </p>
    <p
      class="label"
      id="plaintext"
    >
      Message to be signed:
    </p>
    <p
      class="plaintextLine"
    >
      <textarea
        aria-labelledby="plaintext"
        class="plaintext"
        readonly=""
      >
        All your base are belong to us
      </textarea>
      <button
        aria-label="copy to clipboard"
        class="copy"
        title="copy to clipboard"
        type="button"
      />
    </p>
    <p
      class="resetLine"
    >
      <label
        class="passwordLabel"
        for="password"
      >
        Sign with password:
      </label>
      <a
        class="reset"
        href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/reset"
      >
        Reset password
      </a>
    </p>
    <p
      class="passwordLine"
    >
      <input
        class="password"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <button
        aria-label="Show"
        class="show"
        title="Show"
        type="button"
      />
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
    <label
      class="rememberLabel"
    >
      <span>
        Remember password for the next 15 minutes
      </span>
      <input
        class="remember"
        name="remember"
        type="checkbox"
      />
      <span />
    </label>
    <p
      class="buttonsLine"
    >
      <button
        class="reject"
        type="button"
      >
        Reject
      </button>
      <button
        class="submit"
        disabled=""
        type="submit"
      >
        Sign
      </button>
      <output
        class="errorTooltip"
      >
        You need to upgrade to an on-chain DID first
      </output>
    </p>
  </form>
</div>
`;
